# FinancePortfolio

./: .env.example  .gitignore  .pre-commit-config.yaml  CICD_QUICK_FIX.md  CLAUDE.md  DEPLOYMENT_READINESS.md  NEXT_STEPS.md  README.md  cost_analysis.md  main.py  pyproject.toml  risk_assessment.py
.claude/: settings.local.json
.github/workflows/: ci.yml
audits/: audit-2025-12-10-pea-portfolio-preaudit.md  audit-2025-12-12-sprint5-p0.md
compliance/: pea_eligible_etfs.json  personal_use_declaration.md  risk_disclosures.md
docs/: ALLOCATION_METHODOLOGY.md  BACKTESTING_EXECUTIVE_SUMMARY.md  BACKTESTING_FRAMEWORK_DESIGN.md  CICD_SPRINT5_SUMMARY.md  CI_CD_PRIORITIES.md  COMPLIANCE_PRIORITIES.md  DEPLOYMENT.md  PEA_STRATEGY_GUIDE.md  RISK_LIMITS_RATIONALE.md  SPRINT5_ROADMAP.md  TAX_OPTIMIZATION_ACTION_PLAN.md  TECHNICAL_ARCHITECTURE.md  data_freshness_guide.md  data_pipeline_architecture.md  duckdb_storage_usage.md  fred_fetcher_guide.md  pyrefly_ci_integration.md  sprint5-ml-action-plan.md  sprint5-ml-summary.md  sprint5-p1-plan.md  yahoo_fetcher_guide.md
docs/analysis/: DATA_TEAM_ANALYSIS.md  LEGAL_TEAM_ANALYSIS.md  RESEARCH_TEAM_ANALYSIS.md  STRATEGIC_SYNTHESIS.md  cost_metrics_dashboard.md  cost_optimization_executive_summary.md  cost_optimization_review_2025-12-11.md  cost_optimization_sprint5_review.md
docs/reviews/: EXECUTION_SUMMARY.md  EXECUTIVE-SUMMARY-post-sprint3.md  cicd-deployment-review.md  cicd-sprint5-p0-review.md  data-post-sprint3-review.md  execution-sprint5-p0-review.md  french-tax-optimization-post-sprint5-p0.md  it-core-post-sprint3-review.md  (+13 more)
examples/: data_freshness_example.py  fred_fetcher_example.py  pnl_example.py  yahoo_fetcher_usage.py
scripts/: security_audit.py
src/: __init__.py
tests/: __init__.py  test_yahoo_fetcher.py
(+75 files in other folders)
